Fix modal overflow scolling

--- a/src/css/components/app-modal.less
+++ b/src/css/components/app-modal.less
@@ -15,7 +15,7 @@
 
     .content-component {
       border-left: @modal-footer-border-color 1px solid;
-      overflow: scroll;
+      overflow: auto;
       padding-bottom: @base-spacing-unit*2;
       padding-left: @base-spacing-unit*2;
       padding-right: @base-spacing-unit*2.5;
@@ -42,7 +42,7 @@
     [role="menu"] {
       flex-shrink: 0;
       padding-top: @base-spacing-unit;
-      overflow: scroll;
+      overflow: auto;
     }
   }
 }
