--- a/src/css/components/modal.less
+++ b/src/css/components/modal.less
@@ -37,7 +37,7 @@
 
     max-height: calc(~"80vh" - (@modal-header-height+@modal-footer-height));
     word-wrap: break-word;
-    overflow: scroll;
+    overflow: auto;
 
     .row.full-bleed {
       margin-left: -@modal-body-padding;
